fix: color picker spacingx

--- a/packages/ui/src/inputs/ColorPicker/styles.module.css
+++ b/packages/ui/src/inputs/ColorPicker/styles.module.css
@@ -6,6 +6,13 @@
   width: 100%;
 }
 
+.body {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 100%;
+}
+
 .label {
   font-size: 12px;
   font-weight: 500;
